--- a/.env.template
+++ b/.env.template
@@ -1,9 +1,2 @@
-DATA_DIR="PATH_TO_PROJECT/data/roi-dataset/BRACS_RoI/latest_version"
-TARGET_DIR="PATH_TO_PROJECT/data/patched"
-PATCHES_DIR="PATH_TO_PROJECT/data/patched"
-HISTORIES_DIR="PATH_TO_PROJECT/histories"
-MODELS_DIR="PATH_TO_PROJECT/models"
-GFE_FOLDER="PATH_TO_PROJECT/data/tensors"
-WSI_FOLDER="PATH_TO_PROJECT/data/wsi"
-WSI_FOLDER="PATH_TO_PROJECT/data/wsi"
-GFE_FOLDER="PATH_TO_PROJECT/data/tensors"
+WSI_FOLDER="<path to wsi folder>"
+COORDS_FOLDER="<path to coordinates folder>"
