--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,5 @@
 WSI_FOLDER="<path to wsi folder>"
 COORDS_FOLDER="<path to coordinates folder>"
+EXPERIMENTS_FOLDER="<path to experiments folder>"
+PATCHES_FOLDER="<path to patches folder>"
+ROI_FOLDER="<path to roi folder>"
