--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,4 @@ COORDS_FOLDER="<path to coordinates folder>"
 EXPERIMENTS_FOLDER="<path to experiments folder>"
 PATCHES_FOLDER="<path to patches folder>"
 ROI_FOLDER="<path to roi folder>"
+VIM_WEIGHTS_FOLDER="<path to weights folder>"
